src/style.css
body {
  font-family: "Arimo", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
  background: linear-gradient(170deg, #0090fd 20%, #51d5f9 80%);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  margin: 0;
  cursor: default;
  height: 100vh; /* Optional: Setzt die Höhe des Körpers auf die volle Höhe des Viewports */
}

h1 {
  display: inline;
  font-weight: 300;
}

form {
  min-width: 495px;
  border: none;
}

footer {
  font-size: 10px;
  font-family: Arial;
  text-align: center;
}

a {
  text-decoration: none;
  color: #48bdfd;
}

.search-input {
  outline: none;
  flex-grow: 1;
  min-width: 380px;
  background-color: rgba(255, 255, 255, 0.5);
  color: grey;
  font-size: 14px;
  padding: 10px;
  border-radius: 4px;
  border: none;
  margin-right: 5px;
}

.search-input:hover {
  cursor: text;
}

.search-button {
  font-size: 14px;
  background-color: #0084fb;
  color: white;
  border: none;
  padding: 10px 15px;
  border-radius: 4px;
  min-width: 100px;
  white-space: nowrap;
}

.search-button:hover {
  cursor: pointer;
}

.weather-app {
  background: rgba(255, 255, 255, 0.5);
  color: rgb(255, 255, 255);
  border-radius: 15px;
  box-shadow: 0 20px 50px rgba(65, 50, 100, 0.1);
  min-width: 500px;
  max-width: 500px;
  margin: 50px auto;
  padding: 20px;
}

.location {
  padding: 20px 0px 0px;
  font-size: 15px;
}

.date,
.current-condition {
  font-size: 14px;
  padding-bottom: 5px;
  min-width: 300px;
}

span.material-symbols-outlined.location-icon {
  font-size: 24px;
  color: rgba(255, 255, 255, 1);
  opacity: 100%;
}

.current-temperature {
  font-size: 92px;
  font-weight: 100;
  position: relative;
  top: 10px;
}

.celsius {
  font-size: 26px;
  position: relative;
  top: -34px;
  left: 3px;
}

.min-max-temperature {
  font-size: 16px;
  position: relative;
  top: -26px;
  left: 112px;
  opacity: 60%;
}

.current-weather-container {
  display: flex; /* Aktiviere Flexbox */
  justify-content: space-between; /* Verteile den Platz zwischen den Elementen */
  max-width: 500px;
  max-height: 200px;
}

.current-temperature-icon {
  width: 300px;
  height: 300px;
  position: relative;
  top: -60px;
  right: -10px;
}

.humidtity-wind {
  font-size: 16px;
  color: rgba(255, 255, 255);
  display: flex; /* Setzt das Element als Flexbox Container */
  align-items: center; /* Zentriert die Inhalte vertikal */
  gap: 5px;
  padding: 5px 0px;
}

.current-humidity {
  padding-right: 5px;
}

.material-symbols-outlined {
  color: #48bdfd;
  font-weight: lighter;
  font-size: 16px;
}

.spinner {
  border: 5px solid #e5f5f9;
  border-top: 5px solid #3498db;
  border-radius: 50%;
  width: 20px;
  height: 20px;
  animation: spin 2s linear infinite;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

#loading-spinner {
  position: fixed;
  z-index: 999;
  height: 2em;
  width: 2em;
  overflow: visible;
  margin: auto;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

